# PreFlight

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Plan.md  README.md  debug.py  prompt.txt  pyproject.toml  requirements.txt  scratch.py  test_script.py  test_typer.py  test_typer2.py  tmp579at2ao_pipeline.joblib  tmp579at2ao_prepared.csv  tmp579at2ao_report.json  train_prepared.csv  train_report.json
.claude/agents/: claude-md-updater.md  debugger.md  documenter.md  implementer.md  planner.md  refactor.md  reviewer.md  test-writer.md
.claude/commands/: debug.md  done.md  review.md  ship.md
src/preflight/: __init__.py  assembler.py  cleaner.py  cli.py  compare_report.py  engineer.py  profiler.py  report.py  types.py  validation.py
tests/: mvp_test.py  phase2.py  phase3.py  repo_hygiene.py  test_assembler.py  test_cleaner.py  test_cleaner_coverage.py  test_cli.py  test_cli_coverage.py  test_cli_features.py  test_coverage_gate.py  test_engineer.py  test_full.py  test_init.py  test_profiler.py  test_report.py  test_report_readability.py  test_scaffold.py  test_types.py  test_validation.py
tests/1.0.0/: phase1.py  phase2.py  phase3.py  phase4.py  phase5.py  phase6.py  phase7.py  phase8.py  phase8_1.py  test_full_v1_regression.py
tests/edge_cases/: test_cardinality_extremes.py  test_degenerate_columns.py  test_degenerate_shapes.py
tests/integration/: test_adult_income.py  test_house_prices.py  test_titanic.py
